more keyword filter updates

--- a/notebooks/search/01-keyword-querying-filtering.ipynb
+++ b/notebooks/search/01-keyword-querying-filtering.ipynb
@@ -155,7 +155,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: u3qSKIsB941uqz8zHq-G\n",
+      "ID: OkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
@@ -164,7 +164,7 @@
       "Authors: ['andrew hunt', 'david thomas']\n",
       "Score: 0.7042277\n",
       "\n",
-      "ID: vHqSKIsB941uqz8zHq-G\n",
+      "ID: O0QoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2019-05-03\n",
       "Title: Python Crash Course\n",
       "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
@@ -173,7 +173,7 @@
       "Authors: ['eric matthes']\n",
       "Score: 0.7042277\n",
       "\n",
-      "ID: wnqSKIsB941uqz8zHq-G\n",
+      "ID: QUQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2011-05-13\n",
       "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
       "Summary: A guide to professional conduct in the field of software engineering\n",
@@ -182,7 +182,7 @@
       "Authors: ['robert c. martin']\n",
       "Score: 0.6771651\n",
       "\n",
-      "ID: vnqSKIsB941uqz8zHq-G\n",
+      "ID: PUQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2008-08-11\n",
       "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
       "Summary: A guide to writing code that is easy to read, understand and maintain\n",
@@ -191,7 +191,7 @@
       "Authors: ['robert c. martin']\n",
       "Score: 0.62883455\n",
       "\n",
-      "ID: wXqSKIsB941uqz8zHq-G\n",
+      "ID: QEQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
@@ -244,7 +244,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: wHqSKIsB941uqz8zHq-G\n",
+      "ID: P0QoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2018-12-04\n",
       "Title: Eloquent JavaScript\n",
       "Summary: A modern introduction to programming\n",
@@ -253,7 +253,7 @@
       "Authors: ['marijn haverbeke']\n",
       "Score: 2.0307527\n",
       "\n",
-      "ID: w3qSKIsB941uqz8zHq-G\n",
+      "ID: QkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -262,7 +262,7 @@
       "Authors: ['douglas crockford']\n",
       "Score: 1.7064086\n",
       "\n",
-      "ID: v3qSKIsB941uqz8zHq-G\n",
+      "ID: PkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2015-03-27\n",
       "Title: You Don't Know JS: Up & Going\n",
       "Summary: Introduction to JavaScript and programming as a whole\n",
@@ -310,7 +310,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: wHqSKIsB941uqz8zHq-G\n",
+      "ID: P0QoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2018-12-04\n",
       "Title: Eloquent JavaScript\n",
       "Summary: A modern introduction to programming\n",
@@ -319,7 +319,7 @@
       "Authors: ['marijn haverbeke']\n",
       "Score: 6.0922585\n",
       "\n",
-      "ID: w3qSKIsB941uqz8zHq-G\n",
+      "ID: QkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -328,7 +328,7 @@
       "Authors: ['douglas crockford']\n",
       "Score: 5.1192265\n",
       "\n",
-      "ID: v3qSKIsB941uqz8zHq-G\n",
+      "ID: PkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2015-03-27\n",
       "Title: You Don't Know JS: Up & Going\n",
       "Summary: Introduction to JavaScript and programming as a whole\n",
@@ -380,7 +380,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: wHqSKIsB941uqz8zHq-G\n",
+      "ID: P0QoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2018-12-04\n",
       "Title: Eloquent JavaScript\n",
       "Summary: A modern introduction to programming\n",
@@ -389,7 +389,7 @@
       "Authors: ['marijn haverbeke']\n",
       "Score: 1.0\n",
       "\n",
-      "ID: w3qSKIsB941uqz8zHq-G\n",
+      "ID: QkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -450,7 +450,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: wHqSKIsB941uqz8zHq-G\n",
+      "ID: P0QoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2018-12-04\n",
       "Title: Eloquent JavaScript\n",
       "Summary: A modern introduction to programming\n",
@@ -459,7 +459,7 @@
       "Authors: ['marijn haverbeke']\n",
       "Score: 1.6246022\n",
       "\n",
-      "ID: w3qSKIsB941uqz8zHq-G\n",
+      "ID: QkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -526,14 +526,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: vnqSKIsB941uqz8zHq-G\n",
-      "Publication date: 2008-08-11\n",
-      "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
-      "Summary: A guide to writing code that is easy to read, understand and maintain\n",
-      "Publisher: prentice hall\n",
-      "Reviews: 55\n",
-      "Authors: ['robert c. martin']\n",
-      "Score: 1.9729705\n"
+      "ID: QEQoKosB_0mMvhlcQ6ce\n",
+      "Publication date: 1994-10-31\n",
+      "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
+      "Summary: Guide to design patterns that can be used in any object-oriented language\n",
+      "Publisher: addison-wesley\n",
+      "Reviews: 45\n",
+      "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
+      "Score: 3.788629\n"
      ]
     }
    ],
@@ -542,11 +542,11 @@
     "    \"bool\": {\n",
     "        \"must\": [{\n",
     "            \"term\": {\n",
-    "                \"summary\": \"guide\"\n",
+    "                \"publisher.keyword\": \"addison-wesley\"\n",
     "            }\n",
     "        }, {\n",
     "            \"term\": {\n",
-    "                \"summary\": \"code\"\n",
+    "                \"authors.keyword\": \"richard helm\"\n",
     "            }\n",
     "        }]\n",
     "    }\n",
@@ -583,59 +583,32 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: vnqSKIsB941uqz8zHq-G\n",
-      "Publication date: 2008-08-11\n",
-      "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
-      "Summary: A guide to writing code that is easy to read, understand and maintain\n",
-      "Publisher: prentice hall\n",
-      "Reviews: 55\n",
-      "Authors: ['robert c. martin']\n",
-      "Score: 1.9729705\n",
-      "\n",
-      "ID: w3qSKIsB941uqz8zHq-G\n",
+      "ID: QkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
       "Publisher: oreilly\n",
       "Reviews: 51\n",
       "Authors: ['douglas crockford']\n",
-      "Score: 1.2545931\n",
+      "Score: 2.3070245\n",
       "\n",
-      "ID: u3qSKIsB941uqz8zHq-G\n",
+      "ID: OkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
       "Publisher: addison-wesley\n",
       "Reviews: 30\n",
       "Authors: ['andrew hunt', 'david thomas']\n",
-      "Score: 0.7042277\n",
+      "Score: 1.4816045\n",
       "\n",
-      "ID: vHqSKIsB941uqz8zHq-G\n",
-      "Publication date: 2019-05-03\n",
-      "Title: Python Crash Course\n",
-      "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
-      "Publisher: no starch press\n",
-      "Reviews: 42\n",
-      "Authors: ['eric matthes']\n",
-      "Score: 0.7042277\n",
-      "\n",
-      "ID: wnqSKIsB941uqz8zHq-G\n",
-      "Publication date: 2011-05-13\n",
-      "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
-      "Summary: A guide to professional conduct in the field of software engineering\n",
-      "Publisher: prentice hall\n",
-      "Reviews: 20\n",
-      "Authors: ['robert c. martin']\n",
-      "Score: 0.6771651\n",
-      "\n",
-      "ID: wXqSKIsB941uqz8zHq-G\n",
+      "ID: QEQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
       "Publisher: addison-wesley\n",
       "Reviews: 45\n",
       "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
-      "Score: 0.62883455\n"
+      "Score: 1.4816045\n"
      ]
     }
    ],
@@ -644,11 +617,11 @@
     "    \"bool\": {\n",
     "        \"should\": [{\n",
     "            \"term\": {\n",
-    "                \"summary\": \"guide\"\n",
+    "                \"publisher.keyword\": \"addison-wesley\"\n",
     "            }\n",
     "        }, {\n",
     "            \"term\": {\n",
-    "                \"summary\": \"code\"\n",
+    "                \"authors.keyword\": \"douglas crockford\"\n",
     "            }\n",
     "        }]\n",
     "    }\n",
@@ -685,7 +658,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: u3qSKIsB941uqz8zHq-G\n",
+      "ID: OkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
@@ -694,40 +667,13 @@
       "Authors: ['andrew hunt', 'david thomas']\n",
       "Score: 0.0\n",
       "\n",
-      "ID: vHqSKIsB941uqz8zHq-G\n",
-      "Publication date: 2019-05-03\n",
-      "Title: Python Crash Course\n",
-      "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
-      "Publisher: no starch press\n",
-      "Reviews: 42\n",
-      "Authors: ['eric matthes']\n",
-      "Score: 0.0\n",
-      "\n",
-      "ID: vnqSKIsB941uqz8zHq-G\n",
-      "Publication date: 2008-08-11\n",
-      "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
-      "Summary: A guide to writing code that is easy to read, understand and maintain\n",
-      "Publisher: prentice hall\n",
-      "Reviews: 55\n",
-      "Authors: ['robert c. martin']\n",
-      "Score: 0.0\n",
-      "\n",
-      "ID: wXqSKIsB941uqz8zHq-G\n",
+      "ID: QEQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
       "Publisher: addison-wesley\n",
       "Reviews: 45\n",
       "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
-      "Score: 0.0\n",
-      "\n",
-      "ID: wnqSKIsB941uqz8zHq-G\n",
-      "Publication date: 2011-05-13\n",
-      "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
-      "Summary: A guide to professional conduct in the field of software engineering\n",
-      "Publisher: prentice hall\n",
-      "Reviews: 20\n",
-      "Authors: ['robert c. martin']\n",
       "Score: 0.0\n"
      ]
     }
@@ -737,7 +683,7 @@
     "    \"bool\": {\n",
     "        \"filter\": [{\n",
     "            \"term\": {\n",
-    "                \"summary\": \"guide\"\n",
+    "                \"publisher.keyword\": \"addison-wesley\"\n",
     "            }\n",
     "        }]\n",
     "    }\n",
@@ -745,6 +691,13 @@
     "\n",
     "pretty_response(response)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
