--- a/notebooks/search/00-quick-start.ipynb
+++ b/notebooks/search/00-quick-start.ipynb
@@ -165,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'instance-0000000000', 'cluster_name': 'ad402eb9a59041458b8edfc021e91caf', 'cluster_uuid': 'ks_HfcCdSf2qrcKZQsk9Lg', 'version': {'number': '8.10.2', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '6d20dd8ce62365be9b1aca96427de4622e970e9e', 'build_date': '2023-09-19T08:16:24.564900370Z', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+      "{'name': 'instance-0000000001', 'cluster_name': 'ad402eb9a59041458b8edfc021e91caf', 'cluster_uuid': 'ks_HfcCdSf2qrcKZQsk9Lg', 'version': {'number': '8.10.2', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '6d20dd8ce62365be9b1aca96427de4622e970e9e', 'build_date': '2023-09-19T08:16:24.564900370Z', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
      ]
     }
    ],
@@ -294,7 +294,7 @@
     {
      "data": {
       "text/plain": [
-       "ObjectApiResponse({'errors': False, 'took': 60, 'items': [{'index': {'_index': 'book_index', '_id': 'u3qSKIsB941uqz8zHq-G', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 0, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'vHqSKIsB941uqz8zHq-G', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 1, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'vXqSKIsB941uqz8zHq-G', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 2, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'vnqSKIsB941uqz8zHq-G', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 3, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'v3qSKIsB941uqz8zHq-G', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 4, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'wHqSKIsB941uqz8zHq-G', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 5, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'wXqSKIsB941uqz8zHq-G', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 6, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'wnqSKIsB941uqz8zHq-G', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 7, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'w3qSKIsB941uqz8zHq-G', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 8, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'xHqSKIsB941uqz8zHq-G', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 9, '_primary_term': 1, 'status': 201}}]})"
+       "ObjectApiResponse({'errors': False, 'took': 56, 'items': [{'index': {'_index': 'book_index', '_id': 'OkQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 0, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'O0QoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 1, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'PEQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 2, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'PUQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 3, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'PkQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 4, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'P0QoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 5, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'QEQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 6, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'QUQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 7, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'QkQoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 8, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'Q0QoKosB_0mMvhlcQ6ce', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 9, '_primary_term': 1, 'status': 201}}]})"
       ]
      },
      "execution_count": 7,
@@ -388,7 +388,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: w3qSKIsB941uqz8zHq-G\n",
+      "ID: QkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
@@ -397,16 +397,16 @@
       "Authors: ['douglas crockford']\n",
       "Score: 0.8042828\n",
       "\n",
-      "ID: v3qSKIsB941uqz8zHq-G\n",
+      "ID: PkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2015-03-27\n",
       "Title: You Don't Know JS: Up & Going\n",
       "Summary: Introduction to JavaScript and programming as a whole\n",
       "Publisher: oreilly\n",
       "Reviews: 36\n",
       "Authors: ['kyle simpson']\n",
-      "Score: 0.6989136\n",
+      "Score: 0.69891346\n",
       "\n",
-      "ID: wHqSKIsB941uqz8zHq-G\n",
+      "ID: P0QoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2018-12-04\n",
       "Title: Eloquent JavaScript\n",
       "Summary: A modern introduction to programming\n",
@@ -415,25 +415,25 @@
       "Authors: ['marijn haverbeke']\n",
       "Score: 0.6796988\n",
       "\n",
-      "ID: u3qSKIsB941uqz8zHq-G\n",
+      "ID: OkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
       "Publisher: addison-wesley\n",
       "Reviews: 30\n",
       "Authors: ['andrew hunt', 'david thomas']\n",
-      "Score: 0.6206549\n",
+      "Score: 0.620655\n",
       "\n",
-      "ID: xHqSKIsB941uqz8zHq-G\n",
+      "ID: Q0QoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2012-06-27\n",
       "Title: Introduction to the Theory of Computation\n",
       "Summary: Introduction to the theory of computation and complexity theory\n",
       "Publisher: cengage learning\n",
       "Reviews: 33\n",
       "Authors: ['michael sipser']\n",
-      "Score: 0.60087687\n",
+      "Score: 0.6008769\n",
       "\n",
-      "ID: wnqSKIsB941uqz8zHq-G\n",
+      "ID: QUQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2011-05-13\n",
       "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
       "Summary: A guide to professional conduct in the field of software engineering\n",
@@ -442,7 +442,7 @@
       "Authors: ['robert c. martin']\n",
       "Score: 0.571234\n",
       "\n",
-      "ID: wXqSKIsB941uqz8zHq-G\n",
+      "ID: QEQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
@@ -451,16 +451,16 @@
       "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
       "Score: 0.56499225\n",
       "\n",
-      "ID: vXqSKIsB941uqz8zHq-G\n",
+      "ID: PEQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2020-04-06\n",
       "Title: Artificial Intelligence: A Modern Approach\n",
       "Summary: Comprehensive introduction to the theory and practice of artificial intelligence\n",
       "Publisher: pearson\n",
       "Reviews: 39\n",
       "Authors: ['stuart russell', 'peter norvig']\n",
-      "Score: 0.56054837\n",
+      "Score: 0.5605484\n",
       "\n",
-      "ID: vnqSKIsB941uqz8zHq-G\n",
+      "ID: PUQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2008-08-11\n",
       "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
       "Summary: A guide to writing code that is easy to read, understand and maintain\n",
@@ -469,7 +469,7 @@
       "Authors: ['robert c. martin']\n",
       "Score: 0.5422694\n",
       "\n",
-      "ID: vHqSKIsB941uqz8zHq-G\n",
+      "ID: O0QoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2019-05-03\n",
       "Title: Python Crash Course\n",
       "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
@@ -540,16 +540,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: u3qSKIsB941uqz8zHq-G\n",
+      "ID: OkQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
       "Publisher: addison-wesley\n",
       "Reviews: 30\n",
       "Authors: ['andrew hunt', 'david thomas']\n",
-      "Score: 0.6206549\n",
+      "Score: 0.620655\n",
       "\n",
-      "ID: wXqSKIsB941uqz8zHq-G\n",
+      "ID: QEQoKosB_0mMvhlcQ6ce\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
