--- a/notebooks/integrations/aws-bedrock/langchain-qa-example.ipynb
+++ b/notebooks/integrations/aws-bedrock/langchain-qa-example.ipynb
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "7byqCX6VyWYW"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -109,7 +109,9 @@
         "We'll use the **Cloud ID** to identify our deployment, because we are using Elastic Cloud deployment. To find the Cloud ID for your deployment, go to https://cloud.elastic.co/deployments and select your deployment.\n",
         "\n",
         "\n",
-        "We will use [ElasticsearchStore](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html) to connect to our elastic cloud deployment. This would help create and index data easily. In the ElasticsearchStore instance, will set embedding to [BedrockEmbeddings](https://api.python.langchain.com/en/latest/embeddings/langchain.embeddings.bedrock.BedrockEmbeddings.html) to embed the texts and elasticsearch index name that will be used in this example. In the instance, we will set `strategy` to [ElasticsearchStore.SparseVectorRetrievalStrategy()](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.SparseRetrievalStrategy.html#langchain.vectorstores.elasticsearch.SparseRetrievalStrategy) as we use this strategy to split documents."
+        "We will use [ElasticsearchStore](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html) to connect to our elastic cloud deployment. This would help create and index data easily. In the ElasticsearchStore instance, will set embedding to [BedrockEmbeddings](https://api.python.langchain.com/en/latest/embeddings/langchain.embeddings.bedrock.BedrockEmbeddings.html) to embed the texts and elasticsearch index name that will be used in this example. In the instance, we will set `strategy` to [ElasticsearchStore.SparseVectorRetrievalStrategy()](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.SparseRetrievalStrategy.html#langchain.vectorstores.elasticsearch.SparseRetrievalStrategy) as we use this strategy to split documents.\n",
+        "\n",
+        "As we're using ELSER we use [SparseVectorRetrievalStrategy](https://python.langchain.com/docs/integrations/vectorstores/elasticsearch#sparsevectorretrievalstrategy-elser) strategy. This strategy uses Elasticsearch's sparse vector retrieval to retrieve the top-k results. There is more other [strategies](https://python.langchain.com/docs/integrations/vectorstores/elasticsearch#approxretrievalstrategy) in langchain that might be used base on your needs."
       ],
       "metadata": {
         "id": "Utg-ZqS_QS1G"
@@ -160,7 +162,7 @@
       "metadata": {
         "id": "sjwpw_IxQ72L"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +229,7 @@
       "metadata": {
         "id": "-T2P8_ltRNgy"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -261,7 +263,7 @@
       "cell_type": "markdown",
       "source": [
         "## Asking a question\n",
-        "Now that we have the passages stored in Elasticsearch and llm is initialized, we can now ask a question to get the relevant passages."
+        "Now that we have the passages stored in Elasticsearch and llm is initialized, we can now ask a question to get the relevant passages.\n"
       ],
       "metadata": {
         "id": "9UZskhJRRTQV"
@@ -278,7 +280,17 @@
         "    return_source_documents=True\n",
         ")\n",
         "\n",
-        "ans = qa({\"query\": \"what is the nasa sales team?\"})\n",
+        "questions = [\n",
+        "    'What is the nasa sales team?',\n",
+        "    'What is our work from home policy?',\n",
+        "    'Does the company own my personal project?',\n",
+        "    'What job openings do we have?',\n",
+        "    'How does compensation work?'\n",
+        "]\n",
+        "question = questions[1]\n",
+        "print(f\"Question: {question}\\n\")\n",
+        "\n",
+        "ans = qa({\"query\": question})\n",
         "\n",
         "print(\"\\033[92m ---- Answer ---- \\033[0m\")\n",
         "print(ans[\"result\"] + \"\\n\")\n",
@@ -293,43 +305,65 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gWGfbz2TkuJt",
-        "outputId": "609e8794-08de-4bb0-ab37-db97c2fa163e"
+        "outputId": "12af9c94-9113-4f34-b9de-f60681951206"
       },
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Question: What is our work from home policy?\n",
+            "\n",
             "\u001b[92m ---- Answer ---- \u001b[0m\n",
-            " North America South America region (NASA)\n",
+            " We have a full-time work from home policy that provides guidelines and support for employees to work remotely, ensuring the continuity and productivity of business operations during the COVID-19 pandemic and beyond.\n",
             "\n",
             "\u001b[94m ---- Sources ---- \u001b[0m\n",
-            "Name: Sales Organization Overview\n",
-            "Content: Our sales organization is structured to effectively serve our customers and achieve our business objectives across multiple regions. The organization is divided into the following main regions:\n",
+            "Name: Work From Home Policy\n",
+            "Content: Effective: March 2020\n",
+            "Purpose\n",
             "\n",
-            "The Americas: This region includes the United States, Canada, Mexico, as well as Central and South America. The North America South America region (NASA) has two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America.\n",
-            "------- \n",
+            "The purpose of this full-time work-from-home policy is to provide guidelines and support for employees to conduct their work remotely, ensuring the continuity and productivity of business operations during the COVID-19 pandemic and beyond.\n",
+            "Scope\n",
             "\n",
-            "Name: Sales Organization Overview\n",
-            "Content: Each regional sales team consists of dedicated account managers, sales representatives, and support staff, led by their respective Area Vice-Presidents. They are responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction. The teams collaborate closely with other departments, such as marketing, product development, and customer support, to ensure we consistently deliver high-quality products and services to our clients.\n",
-            "------- \n",
+            "This policy applies to all employees who are eligible for remote work as determined by their role and responsibilities. It is designed to allow employees to work from home full time while maintaining the same level of performance and collaboration as they would in the office.\n",
+            "Eligibility\n",
             "\n",
-            "Name: Sales Engineering Collaboration\n",
-            "Content: Title: Working with the Sales Team as an Engineer in a Tech Company\n",
+            "Employees who can perform their work duties remotely and have received approval from their direct supervisor and the HR department are eligible for this work-from-home arrangement.\n",
+            "Equipment and Resources\n",
+            "-------\n",
             "\n",
-            "Introduction:\n",
-            "As an engineer in a tech company, collaboration with the sales team is essential to ensure the success of the company's products and services. This guidance document aims to provide an overview of how engineers can effectively work with the sales team, fostering a positive and productive working environment.\n",
-            "Understanding the Sales Team's Role:\n",
-            "The sales team is responsible for promoting and selling the company's products and services to potential clients. Their role involves establishing relationships with customers, understanding their needs, and ensuring that the offered solutions align with their requirements.\n",
-            "------- \n",
+            "Name: Work From Home Policy\n",
+            "Content: The company encourages employees to prioritize their health and well-being while working from home. This includes taking regular breaks, maintaining a work-life balance, and seeking support from supervisors and colleagues when needed.\n",
+            "Policy Review and Updates\n",
             "\n",
-            "Name: Sales Engineering Collaboration\n",
-            "Content: By working together, both the engineering and sales teams can contribute to the overall success of the company.\n",
+            "This work-from-home policy will be reviewed periodically and updated as necessary, taking into account changes in public health guidance, business needs, and employee feedback.\n",
+            "Questions and Concerns\n",
             "\n",
-            "Conclusion:\n",
-            "Collaboration between engineers and the sales team is crucial for a tech company's success. By understanding each other's roles, maintaining effective communication, collaborating on projects, and supporting one another, both teams can work together to achieve the company's goals and ensure customer satisfaction.\n",
-            "------- \n",
+            "Employees are encouraged to direct any questions or concerns about this policy to their supervisor or the HR department.\n",
+            "-------\n",
+            "\n",
+            "Name: Work From Home Policy\n",
+            "Content: Employees are required to accurately track their work hours using the company's time tracking system. Non-exempt employees must obtain approval from their supervisor before working overtime.\n",
+            "Confidentiality and Data Security\n",
+            "\n",
+            "Employees must adhere to the company's confidentiality and data security policies while working from home. This includes safeguarding sensitive information, securing personal devices and internet connections, and reporting any security breaches to the IT department.\n",
+            "Health and Well-being\n",
+            "\n",
+            "The company encourages employees to prioritize their health and well-being while working from home. This includes taking regular breaks, maintaining a work-life balance, and seeking support from supervisors and colleagues when needed.\n",
+            "Policy Review and Updates\n",
+            "-------\n",
+            "\n",
+            "Name: Work From Home Policy\n",
+            "Content: Employees who can perform their work duties remotely and have received approval from their direct supervisor and the HR department are eligible for this work-from-home arrangement.\n",
+            "Equipment and Resources\n",
+            "\n",
+            "The necessary equipment and resources will be provided to employees for remote work, including a company-issued laptop, software licenses, and access to secure communication tools. Employees are responsible for maintaining and protecting the company's equipment and data.\n",
+            "Workspace\n",
+            "\n",
+            "Employees working from home are responsible for creating a comfortable and safe workspace that is conducive to productivity. This includes ensuring that their home office is ergonomically designed, well-lit, and free from distractions.\n",
+            "Communication\n",
+            "-------\n",
             "\n"
           ]
         }
