use Langchain Memory Store for Elasticsearch

--- a/notebooks/generative-ai/chatbot.ipynb
+++ b/notebooks/generative-ai/chatbot.ipynb
@@ -50,40 +50,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
-   "source": [
-    "%pip install -U langchain openai elasticsearch tiktoken"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Add Elasticsearch Chat History Module Path\n",
-    "\n",
-    "We will be using a custom module that needs to be loaded into Colab. We will do this by cloning the Elasticsearch Labs Github repo and adding it to the path.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "!git clone https://github.com/elastic/elasticsearch-labs.git\n",
-    "\n",
-    "import sys\n",
-    "sys.path.append('/content/elasticsearch-labs/notebooks/generative-ai')"
+    "%pip install -qU langchain openai elasticsearch tiktoken"
    ]
   },
   {
@@ -97,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -157,22 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Created a chunk of size 866, which is longer than the specified 800\n",
-      "Created a chunk of size 1120, which is longer than the specified 800\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Split 15 documents into 73 passages\n"
+      "Split 15 documents into 24 passages\n"
      ]
     }
    ],
@@ -189,9 +167,9 @@
     "        \"summary\": doc[\"summary\"]\n",
     "    })\n",
     "\n",
-    "text_splitter = CharacterTextSplitter(\n",
-    "    chunk_size=800,\n",
-    "    chunk_overlap=400\n",
+    "text_splitter = CharacterTextSplitter.from_tiktoken_encoder(\n",
+    "    chunk_size=512,\n",
+    "    chunk_overlap=256,\n",
     ")\n",
     "docs = text_splitter.create_documents(content, metadatas=metadata)\n",
     "\n",
@@ -207,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,13 +215,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.llms import OpenAI\n",
     "from langchain.chains import ConversationalRetrievalChain\n",
-    "from lib.elasticsearch_chat_message_history import ElasticsearchChatMessageHistory\n",
+    "from langchain.memory import ElasticsearchChatMessageHistory\n",
     "from uuid import uuid4\n",
     "\n",
     "\n",
@@ -259,7 +237,9 @@
     "\n",
     "session_id = str(uuid4())\n",
     "chat_history = ElasticsearchChatMessageHistory(\n",
-    "    client=vector_store.client,\n",
+    "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    es_user=ELASTIC_USERNAME,\n",
+    "    es_password=ELASTIC_PASSWORD,\n",
     "    session_id=session_id,\n",
     "    index=\"workplace-docs-chat-history\"\n",
     ")"
@@ -276,23 +256,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CHAT SESSION ID] 75557767-2a26-4cc0-9860-1d4868e2449b\n",
+      "[CHAT SESSION ID] 928a7f6a-cd02-4a4d-99a9-13e3486bb6e6\n",
       "[QUESTION] What does NASA stand for?\n",
-      "[ANSWER]   NASA stands for North America South America.\n",
-      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Sales Organization Overview', 'Code Of Conduct', 'Code Of Conduct']\n",
+      "[ANSWER]   NASA stands for North America South America region.\n",
+      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Intellectual Property Policy', 'April Work From Home Update', 'New Employee Onboarding Guide']\n",
       "[QUESTION] Which countries are part of it?\n",
-      "[ANSWER]   North America includes the United States, Canada, and Mexico. South America includes countries such as Brazil, Argentina, Peru, and Colombia.\n",
-      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Sales Organization Overview', 'Sales Organization Overview', 'Sales Organization Overview']\n",
+      "[ANSWER]   The North America South America region includes the United States, Canada, Mexico, as well as Central and South America.\n",
+      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Wfh Policy Update May 2023', 'Fy2024 Company Sales Strategy', 'Fy2024 Company Sales Strategy']\n",
       "[QUESTION] Who are the team's leads?\n",
-      "[ANSWER]   Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America.\n",
-      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Sales Organization Overview', 'Swe Career Matrix', 'Swe Career Matrix']\n"
+      "[ANSWER]   The lead of the North America South America region team is Laura Martinez, the Area Vice President of North America, and Gary Johnson, the Area Vice President of South America.\n",
+      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Fy2024 Company Sales Strategy', 'Wfh Policy Update May 2023', 'Fy2024 Company Sales Strategy']\n"
      ]
     }
    ],
@@ -383,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.3"
   },
   "orig_nbformat": 4,
   "vscode": {
