More examples added to the querying/filtering notebook

--- a/notebooks/search/01-keyword-querying-filtering.ipynb
+++ b/notebooks/search/01-keyword-querying-filtering.ipynb
@@ -129,7 +129,7 @@
     "id": "clXQwoFQ6x61"
    },
    "source": [
-    "### Match query\n",
+    "#### Match query\n",
     "Returns documents that `match` a provided text, number, date or boolean value. The provided text is analyzed before matching.\n",
     "\n",
     "The `match` query is the standard query for performing a full-text search, including options for fuzzy matching.\n",
@@ -220,7 +220,7 @@
     "id": "H-n6hoVsfAqc"
    },
    "source": [
-    "### Multi-match query\n",
+    "#### Multi-match query\n",
     "\n",
     "The `multi_match` query builds on the match query to allow multi-field queries.\n",
     "\n",
@@ -356,7 +356,127 @@
     "id": "yXipv0xSk-nK"
    },
    "source": [
-    "### Prefix search\n",
+    "### Term-level Queries\n",
+    "\n",
+    "You can use term-level queries to find documents based on precise values in structured data. Examples of structured data include date ranges, IP addresses, prices, or product IDs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Term search\n",
+    "\n",
+    "Returns document that contain exactly the search term."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ID: OkQoKosB_0mMvhlcQ6ce\n",
+      "Publication date: 2019-10-29\n",
+      "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
+      "Summary: A guide to pragmatic programming for software engineers and developers\n",
+      "Publisher: addison-wesley\n",
+      "Reviews: 30\n",
+      "Authors: ['andrew hunt', 'david thomas']\n",
+      "Score: 1.4816045\n",
+      "\n",
+      "ID: QEQoKosB_0mMvhlcQ6ce\n",
+      "Publication date: 1994-10-31\n",
+      "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
+      "Summary: Guide to design patterns that can be used in any object-oriented language\n",
+      "Publisher: addison-wesley\n",
+      "Reviews: 45\n",
+      "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
+      "Score: 1.4816045\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = client.search(index=\"book_index\", query={\n",
+    "    \"term\": {\n",
+    "        \"publisher.keyword\": \"addison-wesley\"\n",
+    "    }\n",
+    "})\n",
+    "\n",
+    "pretty_response(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Range search\n",
+    "\n",
+    "Returns documents that contain terms within a provided range.\n",
+    "\n",
+    "The following example returns books that have at least 45 reviews."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ID: PUQoKosB_0mMvhlcQ6ce\n",
+      "Publication date: 2008-08-11\n",
+      "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
+      "Summary: A guide to writing code that is easy to read, understand and maintain\n",
+      "Publisher: prentice hall\n",
+      "Reviews: 55\n",
+      "Authors: ['robert c. martin']\n",
+      "Score: 1.0\n",
+      "\n",
+      "ID: QEQoKosB_0mMvhlcQ6ce\n",
+      "Publication date: 1994-10-31\n",
+      "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
+      "Summary: Guide to design patterns that can be used in any object-oriented language\n",
+      "Publisher: addison-wesley\n",
+      "Reviews: 45\n",
+      "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
+      "Score: 1.0\n",
+      "\n",
+      "ID: QkQoKosB_0mMvhlcQ6ce\n",
+      "Publication date: 2008-05-15\n",
+      "Title: JavaScript: The Good Parts\n",
+      "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
+      "Publisher: oreilly\n",
+      "Reviews: 51\n",
+      "Authors: ['douglas crockford']\n",
+      "Score: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = client.search(index=\"book_index\", query={\n",
+    "    \"range\": {\n",
+    "        \"num_reviews\": {\n",
+    "            \"gte\": 45\n",
+    "        }\n",
+    "    }\n",
+    "})\n",
+    "\n",
+    "pretty_response(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Prefix search\n",
     "\n",
     "Returns documents that contain a specific prefix in a provided field.\n",
     "\n",
@@ -365,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -418,7 +538,7 @@
     "id": "a606YcCmmLHW"
    },
    "source": [
-    "### Fuzzy search\n",
+    "#### Fuzzy search\n",
     "\n",
     "Returns documents that contain terms similar to the search term, as measured by a Levenshtein edit distance.\n",
     "\n",
@@ -435,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -484,19 +604,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "PG9TYqL-8H29"
-   },
+   "metadata": {},
    "source": [
-    "## Filtering\n",
+    "### Compound Queries\n",
     "\n",
-    "In a filter context, a query clause answers the question *“Does this document match this query clause?”* The answer is a simple Yes or No — no scores are calculated. Filter context is mostly used for filtering structured data, for example:\n",
-    "* Does this `timestamp` fall into the range 2015 to 2016?\n",
-    "* Is the `status` field set to `\"published\"`?\n",
-    "\n",
-    "Filter context is in effect whenever a query clause is passed to a `filter` parameter, such as the `filter` or `must_not` parameters in the `bool` query.\n",
-    "\n",
-    "[Read more](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-bool-query.html)"
+    "Compound queries wrap other compound or leaf queries, either to combine their results and scores, or to change their behaviour. They also allow you to switch from query to filter context, but that will be covered later in the Filtering section."
    ]
   },
   {
@@ -505,13 +617,13 @@
     "id": "7do0lmxA_v25"
    },
    "source": [
-    "### **bool.must**\n",
-    "The clause (query) must appear in matching documents and will contribute to the score."
+    "#### bool.must\n",
+    "The clauses must appear in matching documents and will contribute to the score. This effectively performs an \"AND\" logical operation on the given sub-queries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -561,14 +673,14 @@
     "id": "eNlncytRIl9h"
    },
    "source": [
-    "### **bool.should**\n",
+    "#### bool.should\n",
     "\n",
-    "The clause (query) should appear in the matching document."
+    "The clause should appear in the matching document. This performs an \"OR\" logical operation on the given sub-queries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -633,17 +745,34 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "PG9TYqL-8H29"
+   },
+   "source": [
+    "## Filtering\n",
+    "\n",
+    "In a filter context, a query clause answers the question *“Does this document match this query clause?”* The answer is a simple Yes or No — no scores are calculated. Filter context is mostly used for filtering structured data, for example:\n",
+    "* Does this `timestamp` fall into the range 2015 to 2016?\n",
+    "* Is the `status` field set to `\"published\"`?\n",
+    "\n",
+    "Filter context is in effect whenever a query clause is passed to a `filter` parameter, such as the `filter` or `must_not` parameters in the `bool` query.\n",
+    "\n",
+    "[Read more](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-bool-query.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "id": "PGTFXUIkJG4t"
    },
    "source": [
-    "### **bool.filter**\n",
+    "### bool.filter\n",
     "\n",
-    "The clause (query) must appear in matching documents. **However unlike `must` the `score` of the query will be ignored.** Filter clauses are executed in filter context, meaning that scoring is ignored and clauses are considered for caching."
+    "The clause (query) must appear for the document to be included in the results. Unlike query context searches such as `term`, `bool.must` or `bool.should`, a matching `score` isn't calculated because filter clauses are executed in filter context."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -658,22 +787,22 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: OkQoKosB_0mMvhlcQ6ce\n",
-      "Publication date: 2019-10-29\n",
-      "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
-      "Summary: A guide to pragmatic programming for software engineers and developers\n",
-      "Publisher: addison-wesley\n",
-      "Reviews: 30\n",
-      "Authors: ['andrew hunt', 'david thomas']\n",
+      "ID: PUQoKosB_0mMvhlcQ6ce\n",
+      "Publication date: 2008-08-11\n",
+      "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
+      "Summary: A guide to writing code that is easy to read, understand and maintain\n",
+      "Publisher: prentice hall\n",
+      "Reviews: 55\n",
+      "Authors: ['robert c. martin']\n",
       "Score: 0.0\n",
       "\n",
-      "ID: QEQoKosB_0mMvhlcQ6ce\n",
-      "Publication date: 1994-10-31\n",
-      "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
-      "Summary: Guide to design patterns that can be used in any object-oriented language\n",
-      "Publisher: addison-wesley\n",
-      "Reviews: 45\n",
-      "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
+      "ID: QUQoKosB_0mMvhlcQ6ce\n",
+      "Publication date: 2011-05-13\n",
+      "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
+      "Summary: A guide to professional conduct in the field of software engineering\n",
+      "Publisher: prentice hall\n",
+      "Reviews: 20\n",
+      "Authors: ['robert c. martin']\n",
       "Score: 0.0\n"
      ]
     }
@@ -683,7 +812,7 @@
     "    \"bool\": {\n",
     "        \"filter\": [{\n",
     "            \"term\": {\n",
-    "                \"publisher.keyword\": \"addison-wesley\"\n",
+    "                \"publisher.keyword\": \"prentice hall\"\n",
     "            }\n",
     "        }]\n",
     "    }\n",
@@ -693,11 +822,116 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### bool.must_not\n",
+    "The clause (query) must not appear in the matching documents. Because this query also runs in filter context, no scores are calculated; the filter just determines if a document is included in the results or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ID: PUQoKosB_0mMvhlcQ6ce\n",
+      "Publication date: 2008-08-11\n",
+      "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
+      "Summary: A guide to writing code that is easy to read, understand and maintain\n",
+      "Publisher: prentice hall\n",
+      "Reviews: 55\n",
+      "Authors: ['robert c. martin']\n",
+      "Score: 0.0\n",
+      "\n",
+      "ID: QkQoKosB_0mMvhlcQ6ce\n",
+      "Publication date: 2008-05-15\n",
+      "Title: JavaScript: The Good Parts\n",
+      "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
+      "Publisher: oreilly\n",
+      "Reviews: 51\n",
+      "Authors: ['douglas crockford']\n",
+      "Score: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = client.search(index=\"book_index\", query={\n",
+    "    \"bool\": {\n",
+    "        \"must_not\": [{\n",
+    "            \"range\": {\n",
+    "                \"num_reviews\": {\n",
+    "                    \"lte\": 45\n",
+    "                }\n",
+    "            }\n",
+    "        }]\n",
+    "    }\n",
+    "})\n",
+    "\n",
+    "pretty_response(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using Filters with Queries\n",
+    "Filters are often added to search queries with the intention of limiting the search to a subset of the documents. A filter can cleanly eliminate documents from a search, without altering the relevance scores of the results.\n",
+    "\n",
+    "The next example returns books that have the word \"javascript\" in their title, only among the books that have more than 45 reviews."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ID: QkQoKosB_0mMvhlcQ6ce\n",
+      "Publication date: 2008-05-15\n",
+      "Title: JavaScript: The Good Parts\n",
+      "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
+      "Publisher: oreilly\n",
+      "Reviews: 51\n",
+      "Authors: ['douglas crockford']\n",
+      "Score: 1.7064086\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = client.search(index=\"book_index\", query={\n",
+    "    \"bool\": {\n",
+    "        \"must\": [\n",
+    "            {\n",
+    "                \"match\": {\n",
+    "                    \"title\": {\n",
+    "                        \"query\": \"javascript\"\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
+    "        ], \n",
+    "        \"must_not\": [\n",
+    "            {\n",
+    "                \"range\": {\n",
+    "                    \"num_reviews\": {\n",
+    "                        \"lte\": 45\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "})\n",
+    "\n",
+    "pretty_response(response)"
+   ]
   }
  ],
  "metadata": {
