reworded some titles

--- a/notebooks/search/01-keyword-querying-filtering.ipynb
+++ b/notebooks/search/01-keyword-querying-filtering.ipynb
@@ -606,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compound Queries\n",
+    "### Combining Query Conditions\n",
     "\n",
     "Compound queries wrap other compound or leaf queries, either to combine their results and scores, or to change their behaviour. They also allow you to switch from query to filter context, but that will be covered later in the Filtering section."
    ]
@@ -617,7 +617,7 @@
     "id": "7do0lmxA_v25"
    },
    "source": [
-    "#### bool.must\n",
+    "#### bool.must (AND)\n",
     "The clauses must appear in matching documents and will contribute to the score. This effectively performs an \"AND\" logical operation on the given sub-queries."
    ]
   },
@@ -673,7 +673,7 @@
     "id": "eNlncytRIl9h"
    },
    "source": [
-    "#### bool.should\n",
+    "#### bool.should (OR)\n",
     "\n",
     "The clause should appear in the matching document. This performs an \"OR\" logical operation on the given sub-queries."
    ]
